# bevy_mod_imgui

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
examples/: custom-texture.rs  empty.rs  hello-world-postupdate.rs  hello-world.rs  minimal.rs  render-to-texture.rs
src/: lib.rs
src/imgui_wgpu_rs_local/: README.md  imgui.wgsl  mod.rs
