[package]
name = "bevy_mod_imgui"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["game-engines", "graphics", "gui", "rendering"]
description = "A Dear ImGui integration for the Bevy game engine."
readme = "README.md"
repository = "https://github.com/jbrd/bevy_mod_imgui"
rust-version = "1.70.0"
exclude = [".github/", ".gitignore"]

[dependencies]
bevy = "0.12.0"
imgui = "0.11.0"
imgui-wgpu = "0.24.0"
wgpu = "0.17.1"