[package]
name = "bevy_mod_imgui"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["game-engines", "graphics", "gui", "rendering"]
description = "A Dear ImGui integration for the Bevy game engine."
readme = "README.md"
repository = "https://github.com/jbrd/bevy_mod_imgui"
rust-version = "1.70.0"
exclude = [".github/", ".gitignore"]

[dependencies]
bevy = "0.13.0"
imgui = "0.11.0"
wgpu = "0.19.3"

# For imgui_wgpu_rs_local
# imgui-wgpu = "0.24.0" # temporarily bundling imgui-wgpu with this crate
bytemuck = "1"
log = "0.4"
smallvec = "1"